<resources>
    <string name="app_name">Community Coupon</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_coupons_list">CouponsListActivity</string>
    <string name="deals">Deals</string>
    <string name="deals_for_the_week">Deals for the week</string>
    <string name="deals_for_the_week_details">Would you like to get weekly notifications for the deals that we offered?</string>
    <string name="notification_content">Thank you for signing-up for weekly notifications.</string>
    <string name="county">County</string>
    <string name="community">Community</string>
    <string name="type_of_business">Type of Business</string>
    <string name="category">Category</string>
    <string-array name="county_array">
        <item>San Diego</item>
    </string-array>
    <string-array name="community_array">
        <item>Kearny Mesa</item>
        <item>National City</item>
        <item>Mira Mesa</item>
        <item>Rancho PQ</item>
        <item>Scripps Ranch</item>
        <item>Sorrento Valley</item>
    </string-array>


    <string-array name="business_array">
        <item>Restaurants</item>
        <item>Retail</item>
        <item>Services</item>
    </string-array>

    <string-array name="category_array">
        <item>All</item>
        <item>American</item>
        <item>Chinese</item>
        <item>Vietnamese</item>
        <item>Indian</item>
        <item>Japanese</item>
        <item>Thai</item>
        <item>Korean</item>
        <item>Filipino</item>
        <item>Mexican</item>
        <item>Italian</item>
        <item>Desserts</item>
    </string-array>


    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="app_name_coupons">Community Coupon</string>
    <string name="learn_weekly_deals">Get notifications for great deals</string>
    <string name="yes_exclamation">Yes!</string>
    <string name="discount_valid_here">DISCOUNT VALID AT THIS STORE LOCATION ONLY</string>
    <string name="community_discount_app_coupon_warning">The Community Discount App must be installed on this phone for coupon to be valid</string>
    <string name="thank_you_for_using">Thank you for using the Community Discount App</string>
    <string name="valid_for_today_only">VALID FOR TODAY ONLY</string>
    <string name="need_an_app">NEED AN APP OR A MOBILE WEBSITE?</string>
    <string name="tap_here">TAP HERE</string>
    <string name="visit_us">or visit us at:</string>
    <string name="website_url">www.mobilebusinessapplication.com</string>
    <item name="coupons_list_fragment" type="id" />
</resources>
