<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/main_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/appDarkRed"
            android:gravity="center"
            android:padding="20dp"
            android:text="YOUR COUPON"
            android:textColor="@color/appTextColor"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/appVividRed"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/valid_for_today_only"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/appDarkRed"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:textColor="@color/appTextColor"
            android:textSize="12dp"
            android:text="@string/community_discount_app_coupon_warning" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/discount_coupon_20"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/appPureBlue"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="@color/appTextColor"
            android:textSize="12dp"
            android:text="@string/discount_valid_here" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/restaurant_description"
            android:paddingRight="0dp"
            android:paddingLeft="0dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/appDarkRed"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:textColor="@color/appTextColor"
            android:textSize="12dp"
            android:text="@string/thank_you_for_using" />


    </LinearLayout>


</ScrollView>